Version 4.9.10 (TBD)
    Fixed a security issue related to CDATA sanitization during parsing #TINY-4669
Version 4.9.9 (2020-03-25)
    Fixed the table selection not functioning correctly in Microsoft Edge 44 or higher #TINY-3862
    Fixed the table resize handles not functioning correctly in Microsoft Edge 44 or higher #TINY-4160
    Fixed the `forced_root_block_attrs` setting not applying attributes to new blocks consistently #TINY-4564
    Fixed the editor failing to initialize if a script tag was used inside an SVG #TINY-4087
Version 4.9.8 (2020-01-28)
    Fixed the `mobile` theme failing to load due to a bundling issue #TINY-4613
    Fixed security issue related to parsing HTML comments and CDATA #TINY-4544
Version 4.9.7 (2019-12-19)
    Fixed the `visualchars` plugin converting HTML-like text to DOM elements in certain cases #TINY-4507
    Fixed an issue with the `paste` plugin not sanitizing content in some cases #TINY-4510
    Fixed HTML comments incorrectly being parsed in certain cases #TINY-4511
Version 4.9.6 (2019-09-02)
    Fixed image browse button sometimes displaying the browse window twice #TINY-3959
Version 4.9.5 (2019-07-02)
    Changed annotations navigation to work the same as inline boundaries #TINY-3396
    Fixed the print plugin printing from the wrong window in IE11 #TINY-3762
    Fixed an exception being thrown when a file or number input has focus during initialization. Patch contributed by t00 #GH-2194
    Fixed positioning of the styleselect menu in iOS while using the mobile theme #TINY-3505
    Fixed native context menu not showing with images in IE11 #TINY-3392
    Fixed selection incorrectly changing when programmatically setting selection on contenteditable false elements #TINY-3766
    Fixed image browse button not working on touch devices #TINY-3751
    Fixed so that nbsp entities aren't trimmed in white-space: pre-line elements #TINY-3642
    Fixed space key properly inserts a nbsp before/after block elements #TINY-3745