@@ -5,24 +5,33 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import Tools from 'tinymce/core/api/util/Tools';
-import SaxParser from 'tinymce/core/api/html/SaxParser';
+import { Cell, Obj } from '@ephox/katamari';
 import DOMUtils from 'tinymce/core/api/dom/DOMUtils';
+import SaxParser from 'tinymce/core/api/html/SaxParser';
+import Tools from 'tinymce/core/api/util/Tools';
 import VideoScript from './VideoScript';
-import Size from './Size';
+
+type AttrList = Array<{ name: string, value: string }> & { map: Record<string, string> };
 
 const DOM = DOMUtils.DOM;
 
-const getEphoxEmbedIri = function (elm) {
-  return DOM.getAttrib(elm, 'data-ephox-embed-iri');
+const trimPx = (value: string) => value.replace(/px$/, '');
+
+const getEphoxEmbedData = (attrs: AttrList) => {
+  const style = attrs.map.style;
+  const styles = style ? DOM.parseStyle(style) : { };
+  return {
+    type: 'ephox-embed-iri',
+    source1: attrs.map['data-ephox-embed-iri'],
+    source2: '',
+    poster: '',
+    width: Obj.get(styles, 'max-width').map(trimPx).getOr(''),
+    height: Obj.get(styles, 'max-height').map(trimPx).getOr('')
+  };
 };
 
-const isEphoxEmbed = function (html) {
-  const fragment = DOM.createFragment(html);
-  return getEphoxEmbedIri(fragment.firstChild) !== '';
-};
-
-const htmlToDataSax = function (prefixes, html) {
+const htmlToData = (prefixes, html: string) => {
+  const isEphoxEmbed = Cell<boolean>(false);
   let data: any = {};
 
   SaxParser({
@@ -30,42 +39,49 @@ const htmlToDataSax = function (prefixes, html) {
     allow_conditional_comments: true,
     special: 'script,noscript',
     start (name, attrs) {
-      if (!data.source1 && name === 'param') {
-        data.source1 = attrs.map.movie;
-      }
-
-      if (name === 'iframe' || name === 'object' || name === 'embed' || name === 'video' || name === 'audio') {
-        if (!data.type) {
-          data.type = name;
+      if (isEphoxEmbed.get()) {
+        // Ignore any child elements if handling an EME embed
+      } else if (Obj.has(attrs.map, 'data-ephox-embed-iri')) {
+        isEphoxEmbed.set(true);
+        data = getEphoxEmbedData(attrs);
+      } else {
+        if (!data.source1 && name === 'param') {
+          data.source1 = attrs.map.movie;
         }
 
-        data = Tools.extend(attrs.map, data);
-      }
+        if (name === 'iframe' || name === 'object' || name === 'embed' || name === 'video' || name === 'audio') {
+          if (!data.type) {
+            data.type = name;
+          }
 
-      if (name === 'script') {
-        const videoScript = VideoScript.getVideoScriptMatch(prefixes, attrs.map.src);
-        if (!videoScript) {
-          return;
+          data = Tools.extend(attrs.map, data);
         }
 
-        data = {
-          type: 'script',
-          source1: attrs.map.src,
-          width: videoScript.width,
-          height: videoScript.height
-        };
-      }
+        if (name === 'script') {
+          const videoScript = VideoScript.getVideoScriptMatch(prefixes, attrs.map.src);
+          if (!videoScript) {
+            return;
+          }
 
-      if (name === 'source') {
-        if (!data.source1) {
-          data.source1 = attrs.map.src;
-        } else if (!data.source2) {
-          data.source2 = attrs.map.src;
+          data = {
+            type: 'script',
+            source1: attrs.map.src,
+            width: videoScript.width,
+            height: videoScript.height
+          };
         }
-      }
 
-      if (name === 'img' && !data.poster) {
-        data.poster = attrs.map.src;
+        if (name === 'source') {
+          if (!data.source1) {
+            data.source1 = attrs.map.src;
+          } else if (!data.source2) {
+            data.source2 = attrs.map.src;
+          }
+        }
+
+        if (name === 'img' && !data.poster) {
+          data.poster = attrs.map.src;
+        }
       }
     }
   }).parse(html);
@@ -75,24 +91,6 @@ const htmlToDataSax = function (prefixes, html) {
   data.poster = data.poster || '';
 
   return data;
-};
-
-const ephoxEmbedHtmlToData = function (html) {
-  const fragment = DOM.createFragment(html);
-  const div = fragment.firstChild;
-
-  return {
-    type: 'ephox-embed-iri',
-    source1: getEphoxEmbedIri(div),
-    source2: '',
-    poster: '',
-    width: Size.getMaxWidth(div),
-    height: Size.getMaxHeight(div)
-  };
-};
-
-const htmlToData = function (prefixes, html) {
-  return isEphoxEmbed(html) ? ephoxEmbedHtmlToData(html) : htmlToDataSax(prefixes, html);
 };
 
 export default {
